--- a/package.json
+++ b/package.json
@@ -2,27 +2,28 @@
   "name": "st-utils",
   "version": "1.1.0",
   "description": "Utils",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
+  "types": "dist/types/index.d.ts",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc -p tsconfig.json && tsc -p tsconfig.common.json",
     "start": "tsc -w"
   },
   "keywords": [],
   "author": "stLmpp",
   "license": "ISC",
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "~4.14.2",
-    "@typescript-eslint/parser": "~4.14.2",
-    "eslint": "~7.19.0",
+    "@typescript-eslint/eslint-plugin": "~4.15.0",
+    "@typescript-eslint/parser": "~4.15.0",
+    "eslint": "~7.20.0",
     "eslint-config-prettier": "~7.2.0",
     "eslint-plugin-import": "~2.22.1",
     "prettier": "~2.2.1",
     "tslib": "~2.1.0",
-    "typescript": "~4.1.3"
+    "typescript": "~4.1.5"
   },
   "dependencies": {
     "fast-sort": "~2.2.0",
-    "type-fest": "~0.20.2"
+    "type-fest": "~0.21.0"
   }
 }
