--- a/package.json
+++ b/package.json
@@ -12,19 +12,23 @@
   "keywords": [],
   "author": "stLmpp",
   "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/stLmpp/st-utils"
+  },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "~5.19.0",
-    "@typescript-eslint/parser": "~5.19.0",
-    "eslint": "~8.13.0",
+    "@typescript-eslint/eslint-plugin": "~5.30.6",
+    "@typescript-eslint/parser": "~5.30.6",
+    "eslint": "~8.19.0",
     "eslint-config-prettier": "~8.5.0",
     "eslint-plugin-import": "~2.26.0",
-    "prettier": "~2.6.2",
-    "tslib": "~2.3.1",
-    "typescript": "~4.6.3"
+    "prettier": "~2.7.1",
+    "tslib": "~2.4.0",
+    "typescript": "~4.7.4"
   },
   "dependencies": {
     "array-move": "~3.0.1",
-    "fast-sort": "~3.1.3",
-    "type-fest": "~2.12.2"
+    "fast-sort": "~3.2.0",
+    "type-fest": "~2.16.0"
   }
 }
