--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "module": "dist/esm/index.js",
   "types": "dist/types/index.d.ts",
   "scripts": {
-    "build": "tsc -p tsconfig.json && tsc -p tsconfig.common.json",
-    "start": "tsc -w"
+    "build": "rimraf ./dist && tsc -p tsconfig.json && tsc -p tsconfig.common.json",
+    "start": "rimraf ./dist && tsc -w"
   },
   "keywords": [],
   "author": "stLmpp",
@@ -17,12 +17,15 @@
     "url": "https://github.com/stLmpp/st-utils"
   },
   "devDependencies": {
+    "@types/node": "14.x.x",
     "@typescript-eslint/eslint-plugin": "~5.30.6",
     "@typescript-eslint/parser": "~5.30.6",
+    "esbuild": "^0.15.10",
     "eslint": "~8.19.0",
     "eslint-config-prettier": "~8.5.0",
     "eslint-plugin-import": "~2.26.0",
     "prettier": "~2.7.1",
+    "rimraf": "^3.0.2",
     "tslib": "~2.4.0",
     "typescript": "~4.7.4"
   },
