--- a/.prettierrc
+++ b/.prettierrc
@@ -3,6 +3,6 @@
   "tabWidth": 2,
   "semi": true,
   "singleQuote": true,
-  "arrowParens": "avoid",
-  "printWidth": 120
+  "arrowParens": "always",
+  "printWidth": 80
 }
