--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "types": "dist/types/index.d.ts",
   "scripts": {
     "build": "tsc -p tsconfig.json && tsc -p tsconfig.common.json",
-    "start": "tsc -w"
+    "start": "tsc -w",
+    "test": "vitest"
   },
   "keywords": [],
   "author": "stLmpp",
@@ -19,12 +20,14 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "~5.40.0",
     "@typescript-eslint/parser": "~5.40.0",
+    "@vitest/coverage-c8": "^0.24.1",
     "eslint": "~8.25.0",
     "eslint-config-prettier": "~8.5.0",
     "eslint-plugin-import": "~2.26.0",
     "prettier": "~2.7.1",
     "tslib": "~2.4.0",
-    "typescript": "~4.8.4"
+    "typescript": "~4.8.4",
+    "vitest": "^0.24.1"
   },
   "dependencies": {
     "array-move": "~3.0.1",
